contribute/dev/tips/error_boost_python.log
ERRORS GENERATED BY :
 clang++ -o bug_decl.os -c -I/usr/local/Cellar/python/2.7.6/Frameworks/Python.framework/Versions/2.7/include/python2.7 -I/usr/local/Cellar/boost/1.55.0/include/ bug_decl.cpp


 In file included from bug_decl.cpp:7:
 In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:434:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3784:1: error: expected unqualified-id
 _LIBCPP_EXTERN_TEMPLATE(void __sort<__less<char>&, char*>(char*, char*, __less<char>&))
 ^
 bug_decl.cpp:4:37: note: expanded from macro '_LIBCPP_EXTERN_TEMPLATE'
 #define _LIBCPP_EXTERN_TEMPLATE(...)=
 ^
 In file included from bug_decl.cpp:7:
 In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:434:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3856:12: error: no template named '__lower_bound'; did you mean 'lower_bound'?
 return __lower_bound<_Comp_ref>(__first, __last, __value_, __comp);
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3848:1: note: 'lower_bound' declared here
 lower_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3945:23: error: no template named '__lower_bound'; did you mean 'lower_bound'?
 __lower_bound<_Compare>(__first, __m, __value_, __comp),
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3848:1: note: 'lower_bound' declared here
 lower_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3984:15: error: no template named '__lower_bound'; did you mean 'lower_bound'?
 __first = __lower_bound<_Compare>(__first, __last, __value_, __comp);
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3848:1: note: 'lower_bound' declared here
 lower_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:4162:20: error: no template named '__lower_bound'; did you mean 'lower_bound'?
 __m2 = __lower_bound<_Compare>(__middle, __last, *__m1, __comp);
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/algorithm:3848:1: note: 'lower_bound' declared here
 lower_bound(_ForwardIterator __first, _ForwardIterator __last, const _Tp& __value_, _Compare __comp)
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1033:1: error: expected unqualified-id
 _LIBCPP_EXTERN_TEMPLATE(class __basic_string_common<true>)
 ^
 bug_decl.cpp:4:37: note: expanded from macro '_LIBCPP_EXTERN_TEMPLATE'
 #define _LIBCPP_EXTERN_TEMPLATE(...)=
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1733:44: error: out-of-line definition of '__invalidate_all_iterators' from class 'basic_string<_CharT, _Traits, _Allocator>' without definition
 basic_string<_CharT, _Traits, _Allocator>::__invalidate_all_iterators()
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1746:72: error: use of undeclared identifier 'size_type'; did you mean '__size_type'?
 basic_string<_CharT, _Traits, _Allocator>::__invalidate_iterators_past(size_type
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/memory:1105:8: note: '__size_type' declared here
 struct __size_type
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1746:72: error: no template named 'size_type'; did you mean '__size_type'?
 basic_string<_CharT, _Traits, _Allocator>::__invalidate_iterators_past(size_type
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/memory:1105:8: note: '__size_type' declared here
 struct __size_type
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1746:72: error: use of class template __size_type requires template arguments
 basic_string<_CharT, _Traits, _Allocator>::__invalidate_iterators_past(size_type
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/memory:1105:8: note: template is declared here
 struct __size_type
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1746:44: error: out-of-line definition of '__invalidate_iterators_past' from class 'basic_string<_CharT, _Traits, _Allocator>' without definition
 basic_string<_CharT, _Traits, _Allocator>::__invalidate_iterators_past(size_type
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1786:1: error: declarator requires an identifier
 _LIBCPP_INLINE_VISIBILITY inline
 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/__config:154:35: note: expanded from macro '_LIBCPP_INLINE_VISIBILITY'
 #define _LIBCPP_INLINE_VISIBILITY __attribute__ ((__visibility__("hidden"), __always_inline__))
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1790:5: error: use of undeclared identifier '__zero'
 __zero();
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1795:63: error: unknown type name 'allocator_type'
 basic_string<_CharT, _Traits, _Allocator>::basic_string(const allocator_type& __a)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1794:1: error: declarator requires an identifier
 _LIBCPP_INLINE_VISIBILITY inline
 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/__config:154:35: note: expanded from macro '_LIBCPP_INLINE_VISIBILITY'
 #define _LIBCPP_INLINE_VISIBILITY __attribute__ ((__visibility__("hidden"), __always_inline__))
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1796:12: error: use of undeclared identifier '__a'
 : __r_(__a)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1798:5: error: use of undeclared identifier '__zero'
 __zero();
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1803:51: error: no template named 'const_pointer'; did you mean '__const_pointer'?
 basic_string<_CharT, _Traits, _Allocator>::__init(const_pointer __s, size_type __sz, size_type __reserve)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/memory:1008:8: note: '__const_pointer' declared here
 struct __const_pointer
 ^
 In file included from bug_decl.cpp:7:
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/string:1803:51: error: use of class template __const_pointer requires template arguments
 basic_string<_CharT, _Traits, _Allocator>::__init(const_pointer __s, size_type __sz, size_type __reserve)
 ^
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/c++/v1/memory:1008:8: note: template is declared here
 struct __const_pointer
 ^
 fatal error: too many errors emitted, stopping now [-ferror-limit=]
 20 errors generated.

*/

